# Lethal_company_data

./: .gitignore  Enemy_spawns.py  Makefile  Maze_solver.py  Quota_dist.py  Quota_distribution_interpreter.py  README.md  quota_record_list.pkl  quota_record_list2.pkl
Archive/: cover.pur  quota_dist_old.py
Assembly-CSharp/: AISearchRoutine.cs  AlarmButton.cs  AllItemsList.cs  AnimatedItem.cs  AnimatedObjectTrigger.cs  AnimatedTextureUV.cs  AnimationStopPoints.cs  Anomaly.cs  AnomalyType.cs  Assembly-CSharp.csproj  Assembly-CSharp.sln  AudioReverbPresets.cs  AudioReverbTrigger.cs  AudioSourceComparer.cs  AutoParentToShip.cs  BaboonBirdAI.cs  BaboonHawkAudioEvents.cs  BaboonHawkGroup.cs  Battery.cs  BlobAI.cs  (+215 more)
Quota_calculations/: Cumulative.pyx  Cumulative_scratch.py  Longest_run.py  One-shot_quotas.py  Quota_distribution_calculator.html  Quota_distribution_calculator.pyx  Quota_distribution_interpreter.py  Quota_working.py  Quota_working_calc.html  Quota_working_calc.pyx  makefile  pyproject.toml
Quota_calculations/saved_arrays/: plain  quota_1.pkl  quota_10.pkl  quota_11.pkl  quota_12.pkl  quota_13.pkl  quota_14.pkl  quota_15.pkl  quota_16.pkl  quota_17.pkl  quota_18.pkl  quota_19.pkl  quota_2.pkl  quota_20.pkl  quota_21.pkl  quota_22.pkl  quota_23.pkl  quota_24.pkl  quota_25.pkl  quota_26.pkl  quota_27.pkl  quota_28.pkl  quota_29.pkl  quota_3.pkl  quota_30.pkl  quota_31.pkl  quota_32.pkl  quota_33.pkl  quota_34.pkl  quota_35.pkl  quota_36.pkl  quota_37.pkl  quota_38.pkl  quota_39.pkl  quota_4.pkl  quota_40.pkl  quota_41.pkl  quota_42.pkl  quota_5.pkl  quota_6.pkl  (+3 more)
(+590 files in other folders)
