[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Quota_distributions"
version = "0.1"
authors = [{ name = "gyvtuu576", email = "twlln@xtra.co.nz" }]
description = "Lethal company high quota real distributions"
dependencies = ["pandas"]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"]
